# foodgram-project-react

./: .gitignore  .pre-commit-config.yaml  README.md  codecov.yaml  docker-compose.yaml  local.yaml  pyproject.toml  setup.cfg
.envs example/: .django  .swag
backend/: Dockerfile  Makefile  local.yaml  pyproject.toml  setup.cfg
backend/config/: asgi.py  urls.py  wsgi.py
backend/config/settings/: base.py  local.py  production.py  test.py
backend/data/: ingredients_updated.json  make_dump_from_json.py
backend/foodgram/core/: apps.py  constants.py  pagination.py  utils.py
backend/foodgram/recipes/: admin.py  apps.py  constants.py  factories.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/foodgram/recipes/management/commands/: fill_recipes.py
backend/foodgram/recipes/migrations/: 0001_initial.py  0002_auto_20210804_2325.py  0002_auto_20210806_1919.py  0003_auto_20210809_2202.py  0004_auto_20210812_2219.py  0005_auto_20210815_2353.py  0006_auto_20210818_2256.py
backend/foodgram/recipes/templates/: base.html  cart_list_pdf.html
backend/foodgram/recipes/templates/includes/: ingredient_item.html
backend/foodgram/recipes/tests/: test_filters.py  test_management_commands.py  test_models.py  test_urls.py  test_views.py
backend/foodgram/users/: admin.py  apps.py  factories.py  filters.py  models.py  permissions.py  serializers.py  urls.py  views.py
backend/foodgram/users/management/commands/: fill_users.py
backend/foodgram/users/migrations/: 0001_initial.py  0002_auto_20210804_2325.py  0002_auto_20210806_1919.py  0003_auto_20210815_2353.py  0004_auto_20210820_1655.py
backend/foodgram/users/tests/: test_filters.py  test_management_commands.py  test_models.py  test_urls.py  test_views.py
backend/requirements/: dev.txt  prod.txt
data/: ingredients.json  ingredients_updated.json  make_dump_from_json.py
infra/: docker-compose.yml  (+3 more)
(+74 files in other folders)
